# rsgdb

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  RELEASING.md  rsgdb.toml.example
.cursor/rules/: rsgdb-workflow.mdc
.github/workflows/: ci.yml  zephyr-e2e.yml
docs/: ADR-001-breakpoints-semihosting.md
examples/board_test_app/: Makefile  README.md  debug_remote.sh  install_ssh_key.sh  main.c  prepare_cursor_debug.sh  rsgdb.env.example  rsgdb.remote.toml  run_rsgdb_proxy.sh
scripts/: deps_check.sh  e2e_gdb_smoke.sh  e2e_rsp_regression.sh  e2e_zephyr_native_sim.sh  gdbinit.rsgdb.example  validate_local.sh
scripts/zephyr_multi_printf_app/: CMakeLists.txt  prj.conf
scripts/zephyr_multi_printf_app/src/: main.c
src/: config.rs  error.rs  lib.rs  logging_setup.rs  main.rs
src/backends/: mod.rs  native.rs  remote_ssh.rs  stream.rs  tcp.rs
src/breakpoints/: mod.rs
src/flash/: mod.rs
src/logger/: mod.rs
src/protocol/: codec.rs  commands.rs  mod.rs
src/proxy/: mod.rs  server.rs
src/recorder/: jsonl.rs  mod.rs
src/replay/: error.rs  jsonl.rs  mock.rs  mod.rs
src/rtos/: backend_reply.rs  mod.rs
src/scaffold/: breakpoints.rs  mod.rs  state.rs  ui.rs
src/state/: mod.rs
src/svd/: index.rs  mod.rs
src/ui/: mod.rs
tests/: flash_cli.rs  native_spawn_integration.rs  proxy_integration.rs  replay_integration.rs  rsp_codec_matrix.rs  svd_rsp_annotation.rs
tests/fixtures/: minimal.svd
