[package]
name = "rsgdb"
version = "0.1.0"
edition = "2021"
authors = ["Dynamic Devices Ltd"]
description = "An enhanced GDB server/proxy with advanced debugging features for embedded development"
repository = "https://github.com/DynamicDevices/rsgdb"
license = "MIT OR Apache-2.0"
keywords = ["gdb", "debugger", "embedded", "proxy", "rsp"]
categories = ["development-tools::debugging", "embedded"]
readme = "README.md"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# CLI
clap = { version = "4", features = ["derive", "cargo"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Networking
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1"

# Utilities
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
assert_matches = "1.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
